crates/bingo-surface-tui/src/opening/snapshots/bingo_surface_tui__opening__storyboard__shot_0_3_80.snap
---
source: crates/bingo-surface-tui/src/opening/storyboard.rs
expression: "in_look(truecolor(), || drawn(t, width))"
---
"╭────────────────────────────────────────────────────────────────────           "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
