crates/bingo-surface-tui/src/opening/snapshots/bingo_surface_tui__opening__storyboard__shot_1_5_80.snap
---
source: crates/bingo-surface-tui/src/opening/storyboard.rs
expression: "in_look(truecolor(), || drawn(t, width))"
---
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ ✻ Welcome to bingo!                                                          │"
"│                                                                              │"
"│   /help for help · /login codex to use a                                     │"
"│   cwd                                                                        │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
